[gd_scene load_steps=4 format=3 uid="uid://world_map"]

[ext_resource type="Script" path="res://src/world/world_map.gd" id="1_script"]

[sub_resource type="CircleShape2D" id="CircleShape2D_forest"]
radius = 25.0

[sub_resource type="CircleShape2D" id="CircleShape2D_tree_castle"]
radius = 70.0

[sub_resource type="CircleShape2D" id="CircleShape2D_sokoban"]
radius = 60.0

[sub_resource type="CircleShape2D" id="CircleShape2D_ruins"]
radius = 50.0

[sub_resource type="CircleShape2D" id="CircleShape2D_castle"]
radius = 80.0

[sub_resource type="CircleShape2D" id="CircleShape2D_pond"]
radius = 30.0

[sub_resource type="CircleShape2D" id="CircleShape2D_beach"]
radius = 60.0

[sub_resource type="CircleShape2D" id="CircleShape2D_tavern"]
radius = 55.0

[sub_resource type="CircleShape2D" id="CircleShape2D_guild"]
radius = 60.0

[sub_resource type="CircleShape2D" id="CircleShape2D_library"]
radius = 50.0

[sub_resource type="CircleShape2D" id="CircleShape2D_lighthouse"]
radius = 50.0

[node name="WorldMap" type="Node2D"]
script = ExtResource("1_script")

[node name="MapSprite" type="Sprite2D" parent="."]
position = Vector2(640, 360)
centered = true

[node name="ForestHotspot" type="Area2D" parent="."]
input_pickable = true
position = Vector2(880, 320)

[node name="CollisionShape2D" type="CollisionShape2D" parent="ForestHotspot"]
shape = SubResource("CircleShape2D_forest")

[node name="DebugLabel" type="Label" parent="ForestHotspot"]
offset_left = -40.0
offset_top = -12.0
offset_right = 40.0
offset_bottom = 12.0
mouse_filter = 2
theme_override_colors/font_color = Color(1, 0.95, 0.75, 1)
theme_override_colors/font_outline_color = Color(0.15, 0.12, 0.1, 1)
theme_override_constants/outline_size = 3
theme_override_font_sizes/font_size = 14
text = "FOREST"
horizontal_alignment = 1
vertical_alignment = 1

[node name="ForestClearedBadge" type="Label" parent="ForestHotspot"]
visible = false
offset_left = -48.0
offset_top = -28.0
offset_right = 48.0
offset_bottom = -12.0
mouse_filter = 2
theme_override_colors/font_color = Color(0.4, 0.9, 0.4, 1)
theme_override_font_sizes/font_size = 18
text = "‚úì"
horizontal_alignment = 1
vertical_alignment = 1

[node name="TreeCastleHotspot" type="Area2D" parent="."]
input_pickable = true
position = Vector2(1000, 280)

[node name="CollisionShape2D" type="CollisionShape2D" parent="TreeCastleHotspot"]
shape = SubResource("CircleShape2D_tree_castle")

[node name="DebugLabel" type="Label" parent="TreeCastleHotspot"]
offset_left = -40.0
offset_top = -12.0
offset_right = 40.0
offset_bottom = 12.0
mouse_filter = 2
theme_override_colors/font_color = Color(0.85, 0.95, 0.75, 1)
theme_override_colors/font_outline_color = Color(0.15, 0.12, 0.1, 1)
theme_override_constants/outline_size = 3
theme_override_font_sizes/font_size = 14
text = "ÎÇòÎ¨¥ÏÑ±"
horizontal_alignment = 1
vertical_alignment = 1

[node name="SokobanHotspot" type="Area2D" parent="."]
input_pickable = true
position = Vector2(880, 180)

[node name="CollisionShape2D" type="CollisionShape2D" parent="SokobanHotspot"]
shape = SubResource("CircleShape2D_sokoban")

[node name="DebugLabel" type="Label" parent="SokobanHotspot"]
offset_left = -40.0
offset_top = -12.0
offset_right = 40.0
offset_bottom = 12.0
mouse_filter = 2
theme_override_colors/font_color = Color(0.9, 0.85, 0.7, 1)
theme_override_colors/font_outline_color = Color(0.15, 0.12, 0.1, 1)
theme_override_constants/outline_size = 3
theme_override_font_sizes/font_size = 14
text = "ÏÜåÏΩîÎ∞ò"
horizontal_alignment = 1
vertical_alignment = 1

[node name="RuinsHotspot" type="Area2D" parent="."]
input_pickable = true
position = Vector2(740, 320)
z_index = 10

[node name="CollisionShape2D" type="CollisionShape2D" parent="RuinsHotspot"]
shape = SubResource("CircleShape2D_ruins")

[node name="CastleHotspot" type="Area2D" parent="."]
input_pickable = true
position = Vector2(900, 240)

[node name="CollisionShape2D" type="CollisionShape2D" parent="CastleHotspot"]
shape = SubResource("CircleShape2D_castle")

[node name="DebugLabel" type="Label" parent="CastleHotspot"]
offset_left = -40.0
offset_top = -12.0
offset_right = 40.0
offset_bottom = 12.0
mouse_filter = 2
theme_override_colors/font_color = Color(1, 0.95, 0.85, 1)
theme_override_colors/font_outline_color = Color(0.15, 0.12, 0.1, 1)
theme_override_constants/outline_size = 3
theme_override_font_sizes/font_size = 14
text = "CASTLE"
horizontal_alignment = 1
vertical_alignment = 1

[node name="DebugLabel" type="Label" parent="RuinsHotspot"]
offset_left = -40.0
offset_top = -12.0
offset_right = 40.0
offset_bottom = 12.0
mouse_filter = 2
theme_override_colors/font_color = Color(1, 0.95, 0.8, 1)
theme_override_colors/font_outline_color = Color(0.15, 0.12, 0.1, 1)
theme_override_constants/outline_size = 3
theme_override_font_sizes/font_size = 14
text = "RUINS"
horizontal_alignment = 1
vertical_alignment = 1

[node name="RuinsClearedBadge" type="Label" parent="RuinsHotspot"]
visible = false
offset_left = -48.0
offset_top = -28.0
offset_right = 48.0
offset_bottom = -12.0
mouse_filter = 2
theme_override_colors/font_color = Color(0.4, 0.9, 0.4, 1)
theme_override_font_sizes/font_size = 18
text = "‚úì"
horizontal_alignment = 1
vertical_alignment = 1

[node name="RuinsLockedBadge" type="Label" parent="RuinsHotspot"]
visible = false
offset_left = -48.0
offset_top = -28.0
offset_right = 48.0
offset_bottom = -12.0
mouse_filter = 2
theme_override_colors/font_color = Color(0.7, 0.5, 0.5, 1)
theme_override_font_sizes/font_size = 16
text = "üîí"
horizontal_alignment = 1
vertical_alignment = 1

[node name="PondHotspot" type="Area2D" parent="."]
input_pickable = true
position = Vector2(820, 460)
z_index = 0

[node name="CollisionShape2D" type="CollisionShape2D" parent="PondHotspot"]
shape = SubResource("CircleShape2D_pond")

[node name="DebugLabel" type="Label" parent="PondHotspot"]
offset_left = -40.0
offset_top = -12.0
offset_right = 40.0
offset_bottom = 12.0
mouse_filter = 2
theme_override_colors/font_color = Color(0.6, 0.85, 1.0, 1)
theme_override_colors/font_outline_color = Color(0.15, 0.12, 0.1, 1)
theme_override_constants/outline_size = 3
theme_override_font_sizes/font_size = 14
text = "Ïó∞Î™ª"
horizontal_alignment = 1
vertical_alignment = 1

[node name="BeachHotspot" type="Area2D" parent="."]
input_pickable = true
position = Vector2(820, 500)

[node name="CollisionShape2D" type="CollisionShape2D" parent="BeachHotspot"]
shape = SubResource("CircleShape2D_beach")

[node name="DebugLabel" type="Label" parent="BeachHotspot"]
offset_left = -40.0
offset_top = -12.0
offset_right = 40.0
offset_bottom = 12.0
mouse_filter = 2
theme_override_colors/font_color = Color(1, 0.95, 0.7, 1)
theme_override_colors/font_outline_color = Color(0.15, 0.12, 0.1, 1)
theme_override_constants/outline_size = 3
theme_override_font_sizes/font_size = 14
text = "Ìï¥Î≥Ä"
horizontal_alignment = 1
vertical_alignment = 1

[node name="LighthouseHotspot" type="Area2D" parent="."]
input_pickable = true
position = Vector2(900, 545)

[node name="CollisionShape2D" type="CollisionShape2D" parent="LighthouseHotspot"]
shape = SubResource("CircleShape2D_lighthouse")

[node name="DebugLabel" type="Label" parent="LighthouseHotspot"]
offset_left = -40.0
offset_top = -12.0
offset_right = 40.0
offset_bottom = 12.0
mouse_filter = 2
theme_override_colors/font_color = Color(0.95, 0.9, 0.7, 1)
theme_override_colors/font_outline_color = Color(0.15, 0.12, 0.1, 1)
theme_override_constants/outline_size = 3
theme_override_font_sizes/font_size = 14
text = "Îì±ÎåÄ"
horizontal_alignment = 1
vertical_alignment = 1

[node name="TavernHotspot" type="Area2D" parent="."]
input_pickable = true
position = Vector2(560, 415)

[node name="CollisionShape2D" type="CollisionShape2D" parent="TavernHotspot"]
shape = SubResource("CircleShape2D_tavern")

[node name="DebugLabel" type="Label" parent="TavernHotspot"]
offset_left = -40.0
offset_top = -12.0
offset_right = 40.0
offset_bottom = 12.0
mouse_filter = 2
theme_override_colors/font_color = Color(0.95, 0.85, 0.55, 1)
theme_override_colors/font_outline_color = Color(0.15, 0.12, 0.1, 1)
theme_override_constants/outline_size = 3
theme_override_font_sizes/font_size = 14
text = "ÏÑ†Ïà†Ïßë"
horizontal_alignment = 1
vertical_alignment = 1

[node name="GuildHotspot" type="Area2D" parent="."]
input_pickable = true
position = Vector2(490, 400)

[node name="CollisionShape2D" type="CollisionShape2D" parent="GuildHotspot"]
shape = SubResource("CircleShape2D_guild")

[node name="DebugLabel" type="Label" parent="GuildHotspot"]
offset_left = -40.0
offset_top = -12.0
offset_right = 40.0
offset_bottom = 12.0
mouse_filter = 2
theme_override_colors/font_color = Color(0.9, 0.8, 0.6, 1)
theme_override_colors/font_outline_color = Color(0.15, 0.12, 0.1, 1)
theme_override_constants/outline_size = 3
theme_override_font_sizes/font_size = 14
text = "Í∏∏Îìú"
horizontal_alignment = 1
vertical_alignment = 1

[node name="LibraryHotspot" type="Area2D" parent="."]
input_pickable = true
position = Vector2(370, 375)

[node name="CollisionShape2D" type="CollisionShape2D" parent="LibraryHotspot"]
shape = SubResource("CircleShape2D_library")

[node name="DebugLabel" type="Label" parent="LibraryHotspot"]
offset_left = -40.0
offset_top = -12.0
offset_right = 40.0
offset_bottom = 12.0
mouse_filter = 2
theme_override_colors/font_color = Color(0.85, 0.9, 0.95, 1)
theme_override_colors/font_outline_color = Color(0.15, 0.12, 0.1, 1)
theme_override_constants/outline_size = 3
theme_override_font_sizes/font_size = 14
text = "ÎèÑÏÑúÍ¥Ä"
horizontal_alignment = 1
vertical_alignment = 1

[node name="UI" type="CanvasLayer" parent="."]

[node name="HUD" type="Control" parent="UI"]
layout_mode = 3
anchors_preset = 1
anchor_left = 0.0
anchor_right = 0.0
offset_left = 16.0
offset_top = 16.0
offset_right = 220.0
offset_bottom = 72.0
grow_horizontal = 0
grow_vertical = 0

[node name="HPLabel" type="Label" parent="UI/HUD"]
layout_mode = 1
anchors_preset = 1
anchor_left = 0.0
anchor_right = 0.0
offset_left = 0.0
offset_top = 0.0
offset_right = 204.0
offset_bottom = 24.0
grow_horizontal = 0
theme_override_colors/font_color = Color(1, 1, 1, 1)
theme_override_font_sizes/font_size = 18
text = "HP: 100/100"

[node name="GoldLabel" type="Label" parent="UI/HUD"]
layout_mode = 1
anchors_preset = 1
anchor_left = 0.0
anchor_right = 0.0
offset_left = 0.0
offset_top = 28.0
offset_right = 204.0
offset_bottom = 52.0
grow_horizontal = 0
theme_override_colors/font_color = Color(0.95, 0.85, 0.25, 1)
theme_override_font_sizes/font_size = 18
text = "Gold: 0"

[node name="Fade" type="ColorRect" parent="UI"]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 2
color = Color(0, 0, 0, 1)

[node name="GoalBox" type="VBoxContainer" parent="UI"]
anchors_preset = 12
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 24.0
offset_top = -80.0
offset_right = -24.0
offset_bottom = -24.0
grow_horizontal = 0
grow_vertical = 0
theme_override_constants/separation = 4

[node name="GoalLabel" type="Label" parent="UI/GoalBox"]
layout_mode = 2
theme_override_colors/font_color = Color(0.95, 0.92, 0.88, 1)
theme_override_font_sizes/font_size = 18
text = "Î™©Ìëú: Ïà≤Ïùò Ïù¥ÏÉÅ ÏßïÌõÑÎ•º Ï°∞ÏÇ¨ÌïòÎùº."
autowrap_mode = 2

[node name="HintLabel" type="Label" parent="UI/GoalBox"]
layout_mode = 2
theme_override_colors/font_color = Color(0.75, 0.72, 0.68, 1)
theme_override_font_sizes/font_size = 14
text = "ÌûåÌä∏: ÏßÄÏó≠ÏùÑ ÌÅ¥Î¶≠Ìï¥ Ïù¥ÎèôÌïòÏÑ∏Ïöî."
autowrap_mode = 2

[node name="PersistentHint" type="Label" parent="UI"]
anchors_preset = 12
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 24.0
offset_top = -48.0
offset_right = -24.0
offset_bottom = -12.0
grow_horizontal = 0
grow_vertical = 0
theme_override_colors/font_color = Color(1, 0.95, 0.8, 1)
theme_override_font_sizes/font_size = 20
text = "‚ñ∂ ÏßÄÎèÑÏóêÏÑú Ïà≤ ÏßÄÏó≠ÏùÑ ÌÅ¥Î¶≠ÌïòÏÑ∏Ïöî"
horizontal_alignment = 1
vertical_alignment = 2

[node name="Toast" type="Label" parent="UI"]
visible = false
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -200.0
offset_top = -120.0
offset_right = 200.0
offset_bottom = -80.0
grow_horizontal = 2
theme_override_colors/font_color = Color(1, 1, 1, 1)
theme_override_font_sizes/font_size = 20
text = "Ïà≤ÏúºÎ°ú Ïù¥ÎèôÌï©ÎãàÎã§"
horizontal_alignment = 1
vertical_alignment = 1
autowrap_mode = 2

[node name="RegionCard" type="PanelContainer" parent="UI"]
visible = false
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -200.0
offset_top = -90.0
offset_right = 200.0
offset_bottom = 90.0
grow_horizontal = 2
grow_vertical = 2

[node name="Margin" type="MarginContainer" parent="UI/RegionCard"]
layout_mode = 2
theme_override_constants/margin_left = 24
theme_override_constants/margin_top = 20
theme_override_constants/margin_right = 24
theme_override_constants/margin_bottom = 20

[node name="VBox" type="VBoxContainer" parent="UI/RegionCard/Margin"]
layout_mode = 2
theme_override_constants/separation = 12

[node name="RegionName" type="Label" parent="UI/RegionCard/Margin/VBox"]
layout_mode = 2
theme_override_font_sizes/font_size = 28
text = "FOREST"
horizontal_alignment = 1

[node name="LevelLabel" type="Label" parent="UI/RegionCard/Margin/VBox"]
layout_mode = 2
theme_override_colors/font_color = Color(0.8, 0.78, 0.72, 1)
theme_override_font_sizes/font_size = 16
text = "Í∂åÏû• Î†àÎ≤® 1"
horizontal_alignment = 1
autowrap_mode = 2

[node name="FlavorLabel" type="Label" parent="UI/RegionCard/Margin/VBox"]
layout_mode = 2
theme_override_colors/font_color = Color(0.7, 0.68, 0.62, 1)
theme_override_font_sizes/font_size = 14
text = "Î∞úÍ≤¨: Í≥†Î∏îÎ¶∞ ÌùîÏ†Å"
horizontal_alignment = 1
autowrap_mode = 2
